--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mearn-backend",
+  "name": "mearn-app",
   "version": "1.0.0",
-  "description": "goalsetter app",
+  "description": "goal setter app",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
     "express": "^4.18.2",
