--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^6.6.5"
   },
   "devDependencies": {
-    "concurrently": "^7.4.0"
+    "concurrently": "^7.4.0",
+    "nodemon": "^2.0.20"
+
   }
 }
